--- a/main.css
+++ b/main.css
@@ -194,3 +194,13 @@ div.progress {
   font-weight: 700;
   color: black;
 }
+footer {
+  margin: 0 auto;
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
