--- a/main.css
+++ b/main.css
@@ -34,9 +34,9 @@ html {
   padding: 10rem 2.5rem;
   margin: 0 auto;
 }
-.container h1 {
+/* .container h1 {
   display: none;
-}
+} */
 /* For Large Screens */
 @media (min-width: 767px) {
   body {
